# verible-pre-commit

./: .gitignore  .pre-commit-hooks.yaml  setup.cfg
pre_commit_hooks/: run_verible_formatter.py
verible_pre_commit_hooks.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
