[metadata]
name = verible_pre_commit
version = 0.0.1
description = Some out-of-the-box hooks for pre-commit.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
# install_requires =
#     ruamel.yaml>=0.15
#     tomli>=1.1.0
python_requires = >=3.7

[options.entry_points]
console_scripts =
    run-verible-formatter = pre_commit_hooks.run_verible_formatter:main